# fractals

./: .gitignore  LICENSE  README.MD  main.ts  package-lock.json  package.json  tsconfig.json  update.sh
3d/: checks.ts  simple.ts
3d/types/: Line3d.ts  Point2d.ts  Point3d.ts  Segment.ts  Tri3d.ts
lsystems/: parser.ts  tosvg.ts
server/: .rustfmt.toml  Cargo.toml
server/src/: main.rs
server/src/geom/: layer.rs  line.rs  mod.rs  offset.rs  point.rs  segment.rs  threed.rs  twod.rs
server/src/simple/: curves.rs  develop.rs  holes.rs  mod.rs  simplify.rs  thick.rs  thin.rs  util.rs
tests/: lsystems-test.html  lsystems-test.ts  tests.css
web/: 2d.html  2d.ts  3d.ts  lsystems-2d.html  main.ts  package.json  tests.css  tsconfig.json
web/3d/: checks.ts  simple.ts
web/3d/types/: Line2d.ts  Point2d.ts  Point3d.ts  Segment.ts
web/lsystems/: parser.ts  tosvg.ts
web/web/: 2d.html  2d.ts  3d.html  3d.ts  index.css  index.html  index.ts
web/web/debug/: index.html  index.ts
web/web/old/: 2d.ts  3d.ts
web/web/ui/: 2d-preview.ts  commands-table.ts  diagrams.ts  form-interaction.ts  settings.ts  stl-viewer.ts  url-save.ts
web/web/ui/diagrams/: curve.ts  everywhere-holes.ts  helpers.ts  layers.ts  lsystems.ts  parallel-holes.ts
web/web/ui/previews/: controller.ts  worker.js
