[package]
name = "server"
version = "0.1.0"
authors = ["Max Cairney-Leeming <max@cairneyleeming.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
itertools = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stl_io="0.4.2"
log="0.4"
simplelog="0.8.0"
[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["msgpack", "serve"]


[profile.release]
debug = true